--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<h1>
-  {{title}}
-</h1>
+<nav>
+  <div class="nav-wrapper grey darken-4">
+    <a href="#!" class="brand-logo">Stack MEAN - N Switch</a>
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+    <ul class="right hide-on-med-and-down">
+      <li  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/" class="badge">Home</a></li>
+      <li><a href="#">Gaming News</a></li>
+      <li routerLinkActive="active"><a routerLink="/game-list">Gaming List</a></li>
+      <li><a href="#">Gaming Reviews</a></li>
+      <li><a class="waves-effect waves-light btn pink accent-3" routerLink="/login" routerLinkActive="active">Login <i class="material-icons right">power_settings_new</i></a></li>
+    </ul>
+    <ul class="side-nav red accent-3" id="mobile-demo">
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/">Home</a></li>
+      <li><a>Components</a></li>
+      <li><a>Javascript</a></li>
+      <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
+    </ul>
+  </div>
+</nav>
+
+<router-outlet></router-outlet>
